--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.3.1",
+    "autoprefixer": "^10.2.1",
     "next": "10.0.4",
     "postcss": "^8.2.3",
     "react": "17.0.1",
