--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.2.1",
+    "fathom-client": "^3.2.0",
     "next": "10.0.4",
     "next-themes": "^0.0.10",
     "postcss": "^8.2.3",
