--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.4",
+    "@vercel/analytics": "^1.0.1",
     "autoprefixer": "^10.2.1",
-    "fathom-client": "^3.2.0",
     "next": "12.2.5",
     "next-themes": "^0.2.0",
     "postcss": "^8.4.16",
