--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@tailwindcss/typography": "^0.5.4",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "^10.2.1",
