--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@tailwindcss/typography": "^0.5.4",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "^10.2.1",
-    "next": "12.2.5",
+    "eslint-config-next": "^14.0.1",
+    "next": "^14.0.1",
     "next-themes": "^0.2.0",
     "postcss": "^8.4.16",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.1.8"
   }
 }
