--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.4",
     "@vercel/analytics": "^1.0.1",
+    "@vercel/og": "^0.5.13",
     "autoprefixer": "^10.2.1",
     "eslint-config-next": "^14.0.1",
     "next": "^14.0.1",
