--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,8 +2,7 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
-            "@/components/*": ["src/app/components/*"],
-            "@/styles/*": ["styles/*"]
-        }
+            "@/*": ["./src/*"]
+          }
     }
 }
